syntax = "proto3";

import "users.proto";

option go_package = "github.com/practicalgo/code/chap9/server-streaming/service";

service Repo {
  rpc GetRepos (RepoGetRequest) returns (stream RepoGetReply) {}
}

message RepoGetRequest {
  string id = 2;  
  string creator_id = 1;
}

message Repository {
  string id = 1;
  string name = 2;
  string url = 3;  
  User owner = 4;
}

message RepoGetReply {
  Repository repo = 1;
}
